Ajout des tests de login
