# API-Management/src/main/resources/api-spec.yaml
@@ -94,6 +94,8 @@ paths:
       operationId: authenticateUser
       consumes:
         - application/json
+      produces:
+        - text/plain
       parameters:
         - name: user
           in: body
@@ -101,8 +103,12 @@ paths:
           schema:
             $ref: '#/definitions/User'
       responses:
-        '201':
-          description: authenticated
+        '200':
+          description: >
+            Successfully authenticated.
+            The session ID is returned in a cookie named `JSESSIONID`. You need to include this cookie in subsequent requests.
+          schema:
+            type: string
 
 
 
